@@ -54,6 +54,7 @@ where XXXXXX is the bug number as listed below.
 355188  valgrind should intercept all malloc related global functions
 355455  expected stderr of test cases wrapmalloc and wrapmallocstatic overconstrained
 355454  do not intercept malloc related symbols from the runtime linker
+356044  Dwarf line info reader misinterprets is_stmt register
 
 n-i-bz Fix incorrect (or infinite loop) unwind on RHEL7 x86 32 bits
 
